# spartan-codec

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/: codec.rs
spartan-codec/: Cargo.toml
spartan-codec/src/: lib.rs
spartan-sloth/: Cargo.toml  README.md
spartan-sloth/benches/: software.rs  x86_64.rs
spartan-sloth/src/: lib.rs  software.rs  x86_64.rs
src/: lib.rs  sloth.rs
