[package]
name = "spartan-sloth"
version = "0.1.0"
description = "Encoder/decoder for the Subspace Network Blockchain based on the SLOTH permutation"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/spartan-sloth"
repository = "https://github.com/subspace/spartan-codec"
include = [
    "/src",
    "/Cargo.toml",
]

[dependencies.rug]
version = "1.12.0"
optional = true

[dev-dependencies]
criterion = "0.3.4"
rand = "0.8.3"
rayon = "1.5.1"

[[bench]]
name = "software"
required-features = ["software"]
harness = false

[[bench]]
name = "x86_64"
harness = false

[features]
default = ["software"]
# Software implementation using `rug` (GMP) library
software = ["rug"]
